--- a/nginx.conf
+++ b/nginx.conf
@@ -58,7 +58,7 @@ http {
 
         # API proxy
         location /api/ {
-            proxy_pass http://backend:8080/api/;
+            proxy_pass https://hades-clothing-be-production.up.railway.app/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -70,7 +70,7 @@ http {
 
         # Uploads proxy (for images and files)
         location /uploads/ {
-            proxy_pass http://backend:8080/uploads/;
+            proxy_pass https://hades-clothing-be-production.up.railway.app/uploads/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
