--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
 
     # Main application
     server {
-        listen 80;
+        listen ${PORT};
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
