--- a/nginx.conf
+++ b/nginx.conf
@@ -58,6 +58,7 @@ http {
 
         # API proxy
         location /api/ {
+            # proxy_pass http://backend:8080/api/;
             proxy_pass https://hades-clothing-be-production.up.railway.app/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -70,6 +71,7 @@ http {
 
         # Uploads proxy (for images and files)
         location /uploads/ {
+            # proxy_pass http://backend:8080/uploads/;
             proxy_pass https://hades-clothing-be-production.up.railway.app/uploads/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
